--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -1,4 +1,4 @@
-.header-button {
+.button {
     &__button {
         border: 1px solid black;
         display: inline-flex;
@@ -10,6 +10,7 @@
         color: black;
         transition: 0.2s;
         cursor: pointer;
+        justify-content: center;
 
         &:hover {
             background-color: black;
