--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -17,3 +17,22 @@
         gap: 1rem
     }
 }
+
+.header-info {
+    &__base {
+        display: inline-flex;
+        align-items: center;
+        padding: .5rem .75rem;
+        background-color: transparent;
+        color: black;
+        justify-content: center;
+    }
+
+    &__value {
+        display: inline-block;
+        padding: .25rem .5rem;
+        border-radius: 5rem;
+        font-size: 1.5rem;
+        font-weight: 700;
+    }
+}
