--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -11,6 +11,7 @@
         transition: 0.2s;
         cursor: pointer;
         justify-content: center;
+        font-size: 1rem;
 
         &:hover {
             background-color: black;
