--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -9,7 +9,14 @@
     }
 
     &__logo {
-        font-size: 1.25rem;
+        font-size: 1.75rem;
+        background: none;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+        display: inline-flex;
+        align-items: center;
+        gap: .5rem;
     }
 
     &__buttons {
