--- a/src/components/ShoppingCart/style.scss
+++ b/src/components/ShoppingCart/style.scss
@@ -5,7 +5,7 @@
         background-color: rgba(16, 16, 16, 0.9);
         width: 100vw;
         height: 100vh;
-        
+        transform: translateX(100%);
     }
 
     &__aside {
@@ -19,6 +19,11 @@
         flex-direction: column;
         gap: 1rem;
         overflow-y: auto;
+        transition: all .3s;
+
+        &--hidden {
+            transform: translateX(100%);
+        }
     }
 
     &__title {
