feat: update cart numbers throughout all the site

--- a/src/components/NumberInput/styles.scss
+++ b/src/components/NumberInput/styles.scss
@@ -13,7 +13,7 @@
   &__button {
     color: black;
     font-weight: 400;
-    padding: 0.538rem 0.5rem;
+    padding: 0.865rem 0.5rem;
     background-color: white;
     border: none;
 
@@ -46,7 +46,7 @@
     font-weight: 400;
     font-size: 1rem;
     line-height: 130%;
-
+    flex: 1;
     text-align: center;
     background-color: transparent;
     border: none;
