--- a/src/index.scss
+++ b/src/index.scss
@@ -45,12 +45,26 @@ html {
 }
 
 .container {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding-right: 1rem;
   padding-left: 1rem;
 
-  // todo: add responsivo
+  @media only screen and (min-width: 576px) {
+    max-width: 540px;
+  }
+  @media only screen and (min-width: 768px) {
+    max-width: 720px;
+  }
+  @media only screen and (min-width: 992px) {
+    max-width: 960px;
+  }
+  @media only screen and (min-width: 1200px) {
+    max-width: 1140px;
+  }
+  @media only screen and (min-width: 1400px) {
+    max-width: 1320px;
+  }
 }
 
 ::selection {
