--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -12,6 +12,11 @@
         cursor: pointer;
         justify-content: center;
         font-size: 1rem;
+        position: relative;
+
+        @media (max-width: 992px){
+            gap: 0;
+        }
 
         &:hover {
             background-color: black;
@@ -28,5 +33,11 @@
         font-size: .75rem;
         font-weight: bold;
         line-height: 1rem;
+
+        @media (max-width: 992px){
+            position: absolute;
+            top: -.5rem;
+            right: -.5rem;
+        }
     }
 }
