--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,6 +1,23 @@
 .home {
     &__container {
-        display: flex;
+        display: grid;
         gap: 2rem;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        
+        @media only screen and (min-width: 576px) {
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+        @media only screen and (min-width: 768px) {
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+        @media only screen and (min-width: 992px) {
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+        }
+        @media only screen and (min-width: 1200px) {
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+        }
+        @media only screen and (min-width: 1400px) {
+            grid-template-columns: repeat(4, minmax(0, 1fr));
+        }
     }
 }
