--- a/src/components/ShoppingCart/style.scss
+++ b/src/components/ShoppingCart/style.scss
@@ -18,7 +18,7 @@
 
     &__aside {
         background-color: white;
-        width: 30rem;
+        width: 20rem;
         position: absolute;
         right: 0;
         height: 100%;
@@ -28,6 +28,10 @@
         gap: 1rem;
         overflow-y: auto;
         transition: transform 0.3s ease;
+
+        @media only screen and (min-width: 576px) {
+            width: 30rem;
+        }
 
         &--hidden {
             transform: translateX(100%);
@@ -93,6 +97,10 @@
         
         &:hover{
             color:#404040;
+        }
+
+        @media only screen and (max-width: 576px) {
+            font-size: 2.5rem;
         }
     }
 }
