--- a/src/components/ShoppingCart/styles.module.scss
+++ b/src/components/ShoppingCart/styles.module.scss
@@ -90,8 +90,8 @@
         border: none;
         font-size: 3rem;
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 1rem;
+        top: 1rem;
         cursor: pointer;
         transition: 0.2s;
         
