--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -3,6 +3,7 @@
         display: grid;
         gap: 2rem;
         grid-template-columns: repeat(1, minmax(0, 1fr));
+        padding-bottom: 2rem;
         
         @media only screen and (min-width: 576px) {
             grid-template-columns: repeat(2, minmax(0, 1fr));
